Добавляет подчеркивание, описание, оверлэй

--- a/index.html
+++ b/index.html
@@ -75,9 +75,18 @@
         <div class="container">
           <h2 class="section-title">Чем мы занимаемся</h2>
           <ul class="list-section-title">
-            <li class="item"><img src="./images/work/img-1.jpg.jpg" width="370" height="294" alt="верстка сайта" class="image-block"></li>
-            <li class="item"><img src="./images/work/img-2.jpg.jpg" width="370" height="294" alt="макет сайта" class="image-block"></li>
-            <li class="item"><img src="./images/work/img-3.jpg.jpg" width="370" height="294" alt="дизайн сайта" class="image-block"></li>
+            <li class="item">
+              <img src="./images/work/img-1.jpg.jpg" width="370" height="294" alt="верстка сайта" class="image-block">
+              <p class="title-plus label">Десктопные приложения</p>
+            </li>
+            <li class="item">
+              <img src="./images/work/img-2.jpg.jpg" width="370" height="294" alt="макет сайта" class="image-block">
+              <p class="title-plus label">Мобильные приложения</p>
+            </li>
+            <li class="item">
+              <img src="./images/work/img-3.jpg.jpg" width="370" height="294" alt="дизайн сайта" class="image-block">
+              <p class="title-plus label">Дизайнерские решения</p>
+            </li>
           </ul>
         </div>
       </section>
