--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,11 @@
                 <ul class="list-link-projects">
                     <li class="item">
                         <a href="" class="link-project">
-                            <img src="./images/projects/img-1.jpg" alt="Веб-сайт" width="370" height="294" class="image-block">
+                            <div class="project-img">
+                                <img src="./images/projects/img-1.jpg" alt="Веб-сайт" width="370" height="294" class="image-block">
+                                <p class="label">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="card-text">
                                 <h3 class="title-projects">Технокряк</h3>
                                 <p class="description-projects">Веб-сайт</p>
@@ -63,7 +67,10 @@
                     </li>
                     <li class="item">
                         <a href="" class="link-project">
-                            <img src="./images/projects/img-2.jpg" alt="Дизайн постера" width="370" height="294" class="image-block">
+                            <div class="project-img">
+                                <img src="./images/projects/img-2.jpg" alt="Дизайн постера" width="370" height="294" class="image-block">
+                                <p class="label">Спасибо, Андрей!))) Других не знаем - но для нас ты лучший Ментор!!!</p>
+                            </div>
                             <div class="card-text">
                                 <h3 class="title-projects">Постер New Orlean vs Golden Star</h3>
                                 <p class="description-projects">Дизайн</p>
@@ -72,7 +79,11 @@
                     </li>
                     <li class="item">
                         <a href="" class="link-project">
-                            <img src="./images/projects/img-3.jpg" alt="Приложение для ресторана" width="370" height="294" class="image-block">
+                            <div class="project-img">
+                                <img src="./images/projects/img-3.jpg" alt="Приложение для ресторана" width="370" height="294" class="image-block">
+                                <p class="label">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="card-text">
                                 <h3 class="title-projects">Ресторан Seafood</h3>
                                 <p class="description-projects">Приложение</p>
@@ -81,7 +92,11 @@
                     </li>
                     <li class="item">
                         <a href="" class="link-project">
-                            <img src="./images/projects/img-4.jpg" alt="Проект Прайм" width="370" height="294" class="image-block">
+                            <div class="project-img">
+                                <img src="./images/projects/img-4.jpg" alt="Проект Прайм" width="370" height="294" class="image-block">
+                                <p class="label">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="card-text">
                                 <h3 class="title-projects">Проект Prime</h3>
                                 <p class="description-projects">Маркетинг</p>
@@ -90,7 +105,11 @@
                     </li>
                     <li class="item">
                         <a href="" class="link-project">
-                            <img src="./images/projects/img-5.jpg" alt="Приложение Бокс" width="370" height="294" class="image-block">
+                            <div class="project-img">
+                                <img src="./images/projects/img-5.jpg" alt="Приложение Бокс" width="370" height="294" class="image-block">
+                                <p class="label">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="card-text">
                                 <h3 class="title-projects">Проект Boxes</h3>
                                 <p class="description-projects">Приложение</p>
@@ -99,7 +118,11 @@
                     </li>
                     <li class="item">
                         <a href="" class="link-project">
-                            <img src="./images/projects/img-6.jpg" alt="Веб-сайт" width="370" height="294" class="image-block">
+                            <div class="project-img">
+                                <img src="./images/projects/img-6.jpg" alt="Веб-сайт" width="370" height="294" class="image-block">
+                                <p class="label">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="card-text">
                                 <h3 class="title-projects">Inspiration has no Borders</h3>
                                 <p class="description-projects">Веб-сайт</p>
@@ -108,7 +131,11 @@
                     </li>
                     <li class="item">
                         <a href="" class="link-project">
-                            <img src="./images/projects/img-7.jpg" alt="Дизайн издания" width="370" height="294" class="image-block">
+                            <div class="project-img">
+                                <img src="./images/projects/img-7.jpg" alt="Дизайн издания" width="370" height="294" class="image-block">
+                                <p class="label">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="card-text">
                                 <h3 class="title-projects">Издание Limited Edition</h3>
                                 <p class="description-projects">Дизайн</p>
@@ -117,7 +144,11 @@
                     </li>
                     <li class="item">
                         <a href="" class="link-project">
-                            <img src="./images/projects/img-8.jpg" alt="Маркетинговый проект" width="370" height="294" class="image-block">
+                            <div class="project-img">
+                                <img src="./images/projects/img-8.jpg" alt="Маркетинговый проект" width="370" height="294" class="image-block">
+                                <p class="label">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="card-text">
                                 <h3 class="title-projects">Проект LAB</h3>
                                 <p class="description-projects">Маркетинг</p>
@@ -126,7 +157,11 @@
                     </li>
                     <li class="item">
                         <a href="" class="link-project">
-                            <img src="./images/projects/img-9.jpg" alt="Приложение для бизнеса" width="370" height="294" class="image-block">
+                            <div class="project-img">
+                                <img src="./images/projects/img-9.jpg" alt="Приложение для бизнеса" width="370" height="294" class="image-block">
+                                <p class="label">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="card-text">
                                 <h3 class="title-projects">Growing Business</h3>
                                 <p class="description-projects">Приложение</p>
