--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <section class="section-hero">
         <div class="container">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-          <button type="button" class="btn">Заказать услугу</button>
+          <button data-modal-open type="button" class="btn">Заказать услугу</button>
         </div>
       </section>
 
@@ -289,6 +289,7 @@
         </div>
 
       </section>
+
     </main>
 
     <footer class="footer">
@@ -346,5 +347,17 @@
       </div>
       
     </footer>
+
+    <div data-modal class="backdrop is-hidden">
+      <div class="modal"> 
+        <button data-modal-close type="button" class="close-btn">
+        <svg class="close-svg">
+            <use href="./images/modal-icon/sprite.svg#close"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+    
+  <script src="./js/modal.js"></script>
   </body>
 </html>
