--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
                         <a href="" class="link-project">
                             <div class="project-img">
                                 <img src="./images/projects/img-1.jpg" alt="Веб-сайт" width="370" height="294" class="image-block">
-                                <p class="label">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                <p class="label overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                                 шпионажа и атак на защищённые сервера конкурентов.</p>
                             </div>
                             <div class="card-text">
@@ -69,7 +69,8 @@
                         <a href="" class="link-project">
                             <div class="project-img">
                                 <img src="./images/projects/img-2.jpg" alt="Дизайн постера" width="370" height="294" class="image-block">
-                                <p class="label">Спасибо, Андрей!))) Других не знаем - но для нас ты лучший Ментор!!!</p>
+                                <p class="label">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                шпионажа и атак на защищённые сервера конкурентов.</p>
                             </div>
                             <div class="card-text">
                                 <h3 class="title-projects">Постер New Orlean vs Golden Star</h3>
